# 3D_printer_SW

./: README.md  main.py  requirements.txt  requirments.txt  setting.txt  setup.py
CLI/: __init__.py  printer_commands.py
GUI/: CMakeLists.txt  GUI_Printer.qmlproject  GUI_Printer.qmlproject.qtds  main.py  main.qml  main_window.py  qmlmodules  qtquickcontrols2.conf  window.py
GUI/content/: App.qml
GUI/content/controls/: CustomButton.qml  Dialog.qml  LeftMenuBtn.qml  Temperature_box.qml
GUI/content/pages/: Control.qml  MainMenu.qml  Print.qml  Settings.qml  Temperature.qml
GUI/imports/: CMakeLists.txt
GUI/imports/GUI_Printer/: CMakeLists.txt  qmldir
GUI/imports/GUI_Printer/designer/: plugin.metainfo
GUI/src/: import_qml_plugins.h
printer/: communicatio.py  datatypes.py  eeprom.py  messages.py
scripts/start/: start.gcode
test/: Regex.py  URL.py  communication.py  messages.py  ports.py  settings.py  test_settings.py
test/g_code/: TTPRO_17-2020.gcode  kostka.gcode  kostka_v2.gcode
test/test_data/: param_test.txt  test_settings_add.json
utils/: Event.py  EventHandler.py  MQTT.py  auto_system.py  script.py  serial_port.py  settings.py  utils.py
